wallpapers/image: use string data type for `image` property

`wallpaper.configuration.Image` has string type, and assigning a string
value from QML to a url in C++ will truncate the string at the hash char.
This changes `image` data type to string to fix the bug.

BUG: 454692
FIXED-IN: 5.26